Started OOPifying card js.

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -16,6 +16,7 @@
 
   <!-- include spec files here... -->
   <script src="SpecHelper.js"></script>
+  <script src="CardSpec.js"></script>
   <script src="FrenchConjugationsSpec.js"></script>
   <script src="EnglishConjugationsSpec.js"></script>
 
