Start separating out old _global.js file into smaller chunks.

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -12,10 +12,12 @@
   <script src="jasmine/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="../js/_global.js"></script>
+  <script src="../js/Card.js"></script>
+  <script src="../js/common.js"></script>
 
   <!-- include spec files here... -->
   <script src="SpecHelper.js"></script>
+  <script src="GlobalSpec.js"></script>
   <script src="CardSpec.js"></script>
   <script src="FrenchConjugationsSpec.js"></script>
   <script src="EnglishConjugationsSpec.js"></script>
