Include card CSS, for spot-checking styling (use with ?skipCleanup).

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -12,6 +12,7 @@
   <script src="jasmine/boot.js"></script>
 
   <!-- include source files here... -->
+  <link rel="stylesheet" href="../css/_global.css">
   <script src="../js/Card.js"></script>
   <script src="../js/common.js"></script>
 
