--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -13,16 +13,18 @@
 
   <!-- include source files here... -->
   <link rel="stylesheet" href="../css/_global.css">
+  <script src="../js/EnglishLanguage.js"></script>
+  <script src="../js/FrenchLanguage.js"></script>
   <script src="../js/Speaker.js"></script>
   <script src="../js/Card.js"></script>
   <script src="../js/common.js"></script>
 
   <!-- include spec files here... -->
   <script src="SpecHelper.js"></script>
+  <script src="EnglishLanguageSpec.js"></script>
+  <script src="FrenchLanguageSpec.js"></script>
   <script src="SpeakerSpec.js"></script>
   <script src="CardSpec.js"></script>
-  <script src="FrenchConjugationsSpec.js"></script>
-  <script src="EnglishConjugationsSpec.js"></script>
   <script src="GlobalSpec.js"></script>
 
 </head>
