Added "reminder" to test the generated _global.js file manually sometimes.

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -13,6 +13,9 @@
 
   <!-- include source files here... -->
   <link rel="stylesheet" href="../css/_global.css">
+  <!--
+  <script src="../js/_global.js"></script>
+  -->
   <script src="../js/EnglishLanguage.js"></script>
   <script src="../js/FrenchLanguage.js"></script>
   <script src="../js/Speaker.js"></script>
