--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -10,6 +10,8 @@
   <script src="jasmine/jasmine.js"></script>
   <script src="jasmine/jasmine-html.js"></script>
   <script src="jasmine/boot.js"></script>
+  <!-- <script src="jasmine-devrafalko/dom-matchers.js"></script> -->
+  <script src="../../../others/jasmine-dom-custom-matchers/lib/dom-matchers.js"></script>
 
   <!-- include source files here... -->
   <link rel="stylesheet" href="../css/_global.css">
@@ -29,6 +31,7 @@
   <script src="SpeakerSpec.js"></script>
   <script src="CardSpec.js"></script>
   <script src="GlobalSpec.js"></script>
+  <script src="StyleSpec.js"></script>
 
 </head>
 
