Make cloze classes work in Anki; style cloze cards more nicely.

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -18,6 +18,7 @@
   <!--
   <script src="../js/_global.js"></script>
   -->
+  <script src="../js/polyfills.js"></script>
   <script src="../js/EnglishLanguage.js"></script>
   <script src="../js/FrenchLanguage.js"></script>
   <script src="../js/Speaker.js"></script>
