Test-only styles.

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -13,8 +13,15 @@
   <!-- <script src="jasmine-devrafalko/dom-matchers.js"></script> -->
   <script src="../../../others/jasmine-dom-custom-matchers/lib/dom-matchers.js"></script>
 
-  <!-- include source files here... -->
   <link rel="stylesheet" href="../css/_global.css">
+  <style type="text/css">
+    .jasmine_html-reporter {
+      margin-bottom: 2px;
+    }
+    #testId {
+      margin: 5px !important;
+    }
+  </style>
   <!--
   <script src="../js/_global.js"></script>
   -->
@@ -25,7 +32,6 @@
   <script src="../js/Card.js"></script>
   <script src="../js/common.js"></script>
 
-  <!-- include spec files here... -->
   <script src="SpecHelper.js"></script>
   <script src="GlobalSpec.js"></script>
   <script src="CardSpec.js"></script>
