Pluralize German noun cards.

--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -28,6 +28,7 @@
   <script src="../js/polyfills.js"></script>
   <script src="../js/EnglishLanguage.js"></script>
   <script src="../js/FrenchLanguage.js"></script>
+  <script src="../js/GermanLanguage.js"></script>
   <script src="../js/Speaker.js"></script>
   <script src="../js/Card.js"></script>
   <script src="../js/common.js"></script>
@@ -38,6 +39,7 @@
   <script src="SpeakerSpec.js"></script>
   <script src="EnglishLanguageSpec.js"></script>
   <script src="FrenchLanguageSpec.js"></script>
+  <script src="GermanLanguageSpec.js"></script>
   <script src="StyleSpec.js"></script>
 
 </head>
