--- a/spec/SpecRunner.html
+++ b/spec/SpecRunner.html
@@ -36,6 +36,7 @@
   <script src="SpecHelper.js"></script>
   <script src="GlobalSpec.js"></script>
   <script src="CardSpec.js"></script>
+  <script src="CustomClozeCardSpec.js"></script>
   <script src="SpeakerSpec.js"></script>
   <script src="EnglishLanguageSpec.js"></script>
   <script src="FrenchLanguageSpec.js"></script>
